# sellthetrend_cj

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  config_devcontainer.sh  devcontainer.json
notebooks/: ds.ipynb
squeezer/: __init__.py  __main__.py
squeezer/scripts/: __init__.py  _ds.py
